# python_app

./: CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  field_parser.py  main.py  models.py  nixpacks.toml  ocr_service.py  pyproject.toml  replit.md  requirements.txt  test_report.txt  utils.py
attached_assets/: Pasted--patient-info-name-Information-patient-id-null-sex--1750070124317_1750070124321.txt
